This should finally fix margins on mobile

--- a/css/resume.css
+++ b/css/resume.css
@@ -204,7 +204,7 @@ a:hover, a:focus, a:active {
   padding-left: 0.25rem  !important;
 
 
-  margin-right: 4rem !important;
+  margin-right: 2.75 rem !important;
   /* margin-left: 1rem  !important; */
 
 
